# payroll_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  payroll-agent-build-plan.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  concurrency-proof.yml  deploy-migrate.yml  eval.yml  keepalive.yml  pump.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  backlog.md  config.json  v2-hardening-audit.md
.planning/debug/: handoff-live-proof-fail.md  jobs-kind-array-mismatch.md  phase20-comment-provenance.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2-MILESTONE-AUDIT.md  v2-REQUIREMENTS.md  v2-ROADMAP.md  v3-MILESTONE-AUDIT.md  v3-REQUIREMENTS.md  v3-ROADMAP.md  v4-MILESTONE-AUDIT.md  v4-REQUIREMENTS.md
.planning/phases/01-thin-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-REVIEW-FIX.md  01-REVIEW.md  01-REVIEWS.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-walking-skeleton/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-AI-SPEC.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-OVERNIGHT-REPORT.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-R2.md  02-REVIEW.md  02-REVIEWS.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/02.1-deterministic-decisioning/: 02.1-01-PLAN.md  02.1-01-SUMMARY.md  02.1-02-PLAN.md  02.1-02-SUMMARY.md  02.1-03-PLAN.md  02.1-03-SUMMARY.md  02.1-04-PLAN.md  02.1-04-SUMMARY.md  02.1-05-PLAN.md  02.1-05-SUMMARY.md  02.1-CONTEXT.md  02.1-REVIEW.md  02.1-VERIFICATION.md
.planning/phases/03-harden-the-calc/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-round2.md  03-REVIEW-round3.md  03-REVIEW.md  03-REVIEWS.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-the-eval-the-proof/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/reviews/: claude-author-scope-review.md  codex-scope-review.md  roadmap-shape.md
app/: config.py  ingest.py  main.py
app/db/: bootstrap.py  check_schema.py  repo.py  schema.sql  schema_introspect.py  seed.py  supabase.py
app/email/: __init__.py  clean.py  gateway.py
app/llm/: __init__.py  client.py
app/models/: __init__.py  contracts.py  job.py  reconcile.py  roster.py  status.py
app/pipeline/: __init__.py  alias_learning.py  calculate.py  clarification.py  compose_email.py  decide.py  delivery.py  extract.py  federal_withholding.py  orchestrator.py  pdf.py  reconcile_names.py  result.py  send_guard.py  suggest.py  tax_tables_2026.py  validate.py
app/queue/: __init__.py  dispatch.py  drain.py  wake.py  worker.py
app/routes/: __init__.py  dashboard.py  demo.py  health.py  ops.py  pipeline_glue.py  pump.py  runs.py  templating.py  webhook.py
app/static/: style.css
app/templates/: base.html  eval.html  index.html  ops.html  run_detail.html  runs_list.html
docs/: DURABILITY-PROOFS.md  architecture.mmd
eval/: draft_candidate_emails.py  judge.py  run_eval.py  summary.json
eval/fixtures/: 01_exact_match_coastal.json  01_exact_match_coastal_extraction.json  02_stored_alias_metro.json  02_stored_alias_metro_extraction.json  03_collision_metro.json  03_collision_metro_extraction.json  04_unknown_shorthand_metro.json  04_unknown_shorthand_metro_extraction.json  05_typo_coastal.json  05_typo_coastal_extraction.json  06_first_time_alias_metro.json  06_first_time_alias_metro_extraction.json  07_missing_hours_coastal.json  07_missing_hours_coastal_extraction.json  08_vague_hours_coastal.json  09_buried_reply_metro.json  09_buried_reply_metro_extraction.json  10_multi_employee_coastal.json  10_multi_employee_coastal_extraction.json  11_multi_employee_metro.json  11_multi_employee_metro_extraction.json  12_exact_process_summit.json  12_exact_process_summit_extraction.json  13_exact_process_metro.json  13_exact_process_metro_extraction.json  14_collision_process_summit.json  14_collision_process_summit_extraction.json  15_stored_alias_process_coastal.json  15_stored_alias_process_coastal_extraction.json  16_zero_hours_hourly_coastal.json  16_zero_hours_hourly_coastal_extraction.json  17_nfd_name_coastal.json  17_nfd_name_coastal_extraction.json  18_field_drop_clarify_carry_coastal.json  18_field_drop_clarify_carry_coastal_extraction.json  DIVERGENCES.md
fixtures/: clarify_reply.json  clean_happy_path.json  collision_safety.json  gate_block_hero.json
scripts/: check_operator_resolution_inventory.py  check_proof_inventory.py  demo_reset.py  migrate_operator_resolution_authority.py  reset_stuck_runs.py  show_confirmation_subject.py
tests/: conftest.py  test_alias_and_run_column_regressions.py  test_alias_full_loop.py  test_alias_write.py  test_atomic_persist.py  test_background_task_cutover.py  test_bootstrap_safe_url.py  test_bootstrap_timeouts.py  test_bound01_private_imports.py  test_calculate.py  test_check_schema_cli.py  test_claim_status.py  test_clarify.py  test_clarify_round_hours_safety.py  test_clarify_rounds.py  test_combined_context.py  test_comment_provenance_guard.py  test_compose_confirmation.py  test_compose_email_field_regression.py  test_concurrency_proof.py  test_cr01_classify_union.py  test_cr_regressions.py  test_dashboard.py  test_decide_field_regression.py  test_delivery.py  test_demo_fixtures.py  test_demo_landing.py  test_detect_field_regression.py  test_detect_hours_changes.py  test_durability_docs.py  test_durable_ingest.py  test_email_epoch_arbiter_integration.py  test_eval.py  test_eval_wiring.py  test_extract.py  test_fake_repo_pairing.py  test_federal_withholding.py  test_gate.py  test_gateway.py  test_health_queue_alarm.py  (+48 more)
(+539 files in other folders)
