[project]
name = "payroll-agent"
version = "0.1.0"
# IN-09: pinned to 3.12.x to match CLAUDE.md's python:3.12-slim runtime target
# and avoid the 3.13/3.14 wheel-availability edge cases for native deps.
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "psycopg[binary,pool]==3.3.4",
    "openai==2.43.0",
    "reportlab==5.0.0",
    "jinja2==3.1.6",
    "python-multipart==0.0.20",
]

# Dev/test tooling — NOT installed into the runtime Docker image.
# `uv sync` installs these by default; the Docker build uses `--no-dev`.
[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
# Register custom markers so pytest doesn't warn about unknown marks.
markers = [
    "integration: marks tests as requiring a live database (deselect with -m 'not integration')",
    "live_llm: marks tests as hitting real DeepSeek/Kimi APIs (deselect with -m 'not live_llm')",
]
