[project]
name = "payroll-agent"
version = "0.1.0"
# IN-09: pinned to 3.12.x to match CLAUDE.md's python:3.12-slim runtime target
# and avoid the 3.13/3.14 wheel-availability edge cases for native deps.
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "psycopg[binary,pool]==3.3.4",
    "openai==2.43.0",
    "reportlab==5.0.0",
    "jinja2==3.1.6",
    "python-multipart==0.0.20",
    "resend==2.32.2",
]

# Dev/test tooling — NOT installed into the runtime Docker image.
# `uv sync` installs these by default; the Docker build uses `--no-dev`.
[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
    "mypy>=2.2.0",
    "numpy>=1.26.0",
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
# Register custom markers so pytest doesn't warn about unknown marks.
markers = [
    "integration: marks tests as requiring a live database (deselect with -m 'not integration')",
    "live_llm: marks tests as hitting real DeepSeek/Kimi APIs (deselect with -m 'not live_llm')",
]

[tool.ruff]
# D-02: 100 is the measured tradeoff — 160 lines exceed 100 vs 1,297 that exceed the 88 default.
line-length = 100
# Explicit pin matching .python-version / the python:3.12-slim Docker target (CLAUDE.md),
# even though ruff can infer this from requires-python — keeps the target version legible
# directly in the ruff config block.
target-version = "py312"

[tool.ruff.lint]
# D-01: curated production ruleset — pycodestyle errors, pyflakes, isort import-sorting,
# flake8-bugbear, pyupgrade, flake8-simplify. Not the bare defaults.
# D-03: no ignore list and no per-file-ignores table — every violation gets fixed or an
# individually-justified inline `# noqa: <CODE> — <reason>`.
select = ["E", "F", "I", "B", "UP", "SIM"]

# D-01: runtime code is checked with mypy's complete strict bundle.
# D-06: keep the checked scope in committed config so local and CI bare commands match.
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["app", "eval", "scripts", "tests"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = true          # D-02: check every test body; relax annotation requirements only.
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "reportlab.*"
# D-03/D-04: reportlab ships no py.typed marker; future untyped dependencies use this
# scoped override-plus-justification pattern rather than a global ignore_missing_imports.
ignore_missing_imports = true
