[project]
name = "payroll-agent"
version = "0.1.0"
# Pinned to 3.12.x to match the python:3.12-slim runtime target and to avoid the
# 3.13/3.14 wheel-availability edge cases for native deps.
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "psycopg[binary,pool]==3.3.4",
    "openai==2.43.0",
    "reportlab==5.0.0",
    "jinja2==3.1.6",
    "python-multipart==0.0.20",
    "resend==2.32.2",
]

# Dev/test tooling — NOT installed into the runtime Docker image.
# `uv sync` installs these by default; the Docker build uses `--no-dev`.
[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
    "mypy>=2.2.0",
    "numpy>=1.26.0",
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
# Register custom markers so pytest doesn't warn about unknown marks.
markers = [
    "integration: marks tests as requiring a live database (deselect with -m 'not integration')",
    "live_llm: marks tests as hitting real DeepSeek/Kimi APIs (deselect with -m 'not live_llm')",
    "queueproof: a durability proof for the v4 job queue; MUST execute in CI against a real Postgres",
]

[tool.ruff]
# 100 is the measured tradeoff — 160 lines exceed 100 vs 1,297 that exceed the 88 default.
line-length = 100
# Explicit pin matching .python-version / the python:3.12-slim Docker target (CLAUDE.md),
# even though ruff can infer this from requires-python — keeps the target version legible
# directly in the ruff config block.
target-version = "py312"

[tool.ruff.lint]
# Curated production ruleset — pycodestyle errors, pyflakes, isort import-sorting,
# flake8-bugbear, pyupgrade, flake8-simplify. Not the bare defaults.
# No ignore list and no per-file-ignores table: every violation gets fixed, or gets an
# individually-justified inline `# noqa: <CODE> — <reason>`.
select = ["E", "F", "I", "B", "UP", "SIM"]

# Runtime code is checked with mypy's complete strict bundle. The checked scope lives in
# committed config so a bare local command and a bare CI command cover identical ground.
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["app", "eval", "scripts", "tests"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = true          # Check every test body; relax annotation requirements only.
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "reportlab.*"
# reportlab ships no py.typed marker. Future untyped dependencies use this scoped
# override-plus-justification pattern rather than a global ignore_missing_imports, so
# that a missing stub is always a named, deliberate exception instead of a blanket hole.
ignore_missing_imports = true
